# rtactor-rs

./: CHANGELOG.md  Cargo.lock-1.75.0  Cargo.toml  LICENSE  README.md
.config/: cspell.json
.github/workflows/: publish.yml  tests.yml
rtactor/: Cargo.toml  README.md
rtactor-macros/: Cargo.toml  README.md
rtactor-macros/src/: lib.rs
src/: active.rs  actor.rs  async_actor.rs  dispatcher.rs  lib.rs  mpsc_dispatcher.rs  profiled_actor.rs  profiling_aggregator.rs  reactive.rs  reactive_mocker.rs  simulation.rs
tests/: active.rs  async_actor.rs  profiled_actor.rs  profiling_aggregator.rs  reactive.rs  reactive_mocker.rs  readme_minimal_example.rs  readme_realistic_example.rs  rtactor_macros.rs  simulation.rs
